force-app/main/default/objects/APXTConga4__Document_History__c/fields/APXTConga4__Master_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Master_Object_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Master Object ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>