force-app/main/default/objects/APXTConga4__Document_History__c/fields/APXTConga4__URL__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>